app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap");
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
@tailwind base;
@tailwind components;
@tailwind utilities;

.cursive {
  font-family: "Cedarville Cursive", cursive;
}

.Welcome-text {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.4)
    ),
    linear-gradient(90.01deg, #e59cff 0.01%, #ba9cff 50.01%, #9cb2ff 100%);
  background-blend-mode: normal, screen;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.Welcome-box {
  isolation: isolate;
  overflow: hidden;
  align-items: center;
  -webkit-backdrop-filter: blur(6px);
  backdrop-filter: blur(6px);
  border-radius: 32px;
  box-shadow: inset 0 -7px 11px #a48fff1f;
  display: flex;

  position: relative;
  width: -moz-max-content;
  width: max-content;
  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
}

.button-primary {
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  transition: transform 0.2s;
}

.button-primary:hover {
  transform: scale(1.1);
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hidden {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.scrollbar-hidden::-webkit-scrollbar {
  display: none;
}

.max-w-screen {
  max-width: 2200px;
}	

.gap-1 {
  gap: 0.4rem;
}

.rounded-xl {
  border-radius: 1rem;
}

.page-padding {
  padding-left: 12rem;
  padding-right: 12rem;
}

.project-padding {
  padding-left: 24rem;
  padding-right: 24rem;
  min-height: 100vh;
}

.bg-gradient-to-b{
  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
}

.from-a{
  --tw-gradient-from: #030014 var(--tw-gradient-from-position);
  --tw-gradient-to: rgba(34, 67, 255, 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.to-b{
  --tw-gradient-to: #313aa5 var(--tw-gradient-to-position);
}

.img-container{
  display: inline-block;
  position: relative;
}

.experience-card{
  background-color: #130d5eab;
  border-radius: 2rem;
  height: auto;
  max-width: 1600px;
}

.project-card{
  background-color: #00000053;
  border-radius: 2rem;
  transform: scale(1);
  transition: transform 0.2s;
  height: auto;
  min-height: 450px;
  max-width: 800px;
}

.project-card:hover {
  border: 2px solid #06b6d4;
  transform: scale(1.05);
  transition: transform 0.2s;
}

.avatar-wrapper{
  border-radius: 50%;
  overflow: hidden;
  border: 10px solid #313aa5;
  width: 400px;
  height: 400px;
}

.avatar-image{
  width: 100%;
  height: 100%;
  transform: translate3d(0px, 0px, 0.1px);
}

.justify-right{
  justify-content: right;
}

.nav-button {
  color: #ffffff;
  transition: transform 0.1s ease-in-out;
}

.nav-button:hover {
  color: #06b6d4;
  font-weight: bold;
  transform: scale(1.1);
}

.read-more-button {
  margin-top: 20px;
  color: #06b6d4;
  font-weight: 500;
  background-color: #ffffff;
  border-radius: 1rem;
  transition: transform 0.1s ease-in-out;
}

.read-more-button:hover {
  background-color: #06b6d4;
  color: #ffffff;
  transform: scale(1.1);
}

.fa-github, .fa-linkedin, .fa-envelope {
  color: #ffffff;
  scale: 1.25;
  transition: transform 0.4s ease-in-out;
}

.fa-github:hover, .fa-linkedin:hover, .fa-envelope:hover {
  color: #06b6d4;
  transform: rotateY(360deg) scale(1.5);
}

.fa-chevron-down {
  color: #06b6d4;
  scale: 3;
}

.fa-square-github {
  color: #ffffff;
  scale: 3.6;
  transition: transform 0.2s ease-in-out;
  margin-right: 60px;
}

.fa-arrow-up-right-from-square {
  color: #ffffff;
  scale: 3.3;
  transition: transform 0.1s ease-in-out;
}

.fa-square-github:hover, .fa-arrow-up-right-from-square:hover{
  color: #06b6d4;
  transform: scale(1.1);
}

.overlay {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background: #00000088;
  transition: background 0.3s ease-in-out;
}

.contact-form {
  background-color: #00000053;
  border-radius: 2rem;
  transform: scale(1);
  height: auto;
  max-width: 800px;
}

.contact-input {
  background-color: #00000053;
  color: #ffffff;
  border-radius: 1rem;
  transform: scale(1);
  transition: transform 0.2s;
}

.contact-input:valid {
  border: 1px solid #06b6d4;
}

.contact-input:focus, contact-input.form-control:focus {
  border: 1px solid #0655d4;
}

@keyframes fadeAnimation {
  0% {
    opacity: 1;
    color: #06b6d4;
  }
  25% {
    opacity: 0.75;
    color: #0682d4;
  }
  50% {
    opacity: 0.5;
    color: #556df7;
  }
  75% {
    opacity: 0.25;
    color: #5855f7;
  }
  100% {
    opacity: 0;
    color: #a855f7;
  }
}

.toast-position {
  top: 3.5rem;
}

@media screen and (max-width: 600px) {
  .page-padding {
    padding-left: 3rem;
    padding-right: 3rem;
  }
  .nav-button {
    font-size: 10px;
  }
  .avatar-wrapper {
    width: 250px;
    height: 250px;
  }
  .fa-github, .fa-linkedin, .fa-envelope {
    scale: 0.8;
  }
  .project-card{
    min-height: 350px;
  }

  .fa-square-github {
    scale: 2.6;
    margin-right: 40px;
  }
  
  .fa-arrow-up-right-from-square {
    scale: 2.3;
  }
}

@media screen and (min-width: 2200px) {
  .page-padding {
    padding-left: 12rem;
    padding-right: 12rem;
  }
  .nav-button {
    font-size: 20px;
  }
  .avatar-wrapper {
    border-radius: 50%;
    overflow: hidden;
    border: 12px solid #313aa5;
    width: 550px;
    height: 550px;
  }
  .fa-github, .fa-linkedin, .fa-envelope {
    color: #ffffff;
    scale: 1.5;
    transition: transform 0.4s ease-in-out;
  }

  .fa-square-github {
    scale: 4.3;
    margin-right: 65px;
  }
  
  .fa-arrow-up-right-from-square {
    scale: 4;
  }
}


html {
  scroll-behavior: smooth;
}

